apps/autonomous-investing/namespace-autonomous-investing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autonomous-investing
  labels:
    app.kubernetes.io/part-of: autonomous-investing
    kubernetes.io/metadata.name: autonomous-investing
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
