apps/autonomous-investing/networkpolicy-autonomous-investing-ib-gateway-paper-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ib-gateway-paper-default-deny
  namespace: autonomous-investing
spec:
  egress: []
  ingress: []
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ib-gateway-paper
  policyTypes:
  - Ingress
  - Egress
